src/objects/Worker__c.object
<CustomObject>
    <description>Operator for POS register</description>
    <fields>
        <fullName>Field10__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>退社されたとき、チェックを入れて下さい！</inlineHelpText>
        <label>退社</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>携帯電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>ひらがな</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>扱者</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>扱者名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>